# obsidian-garden-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: config.ini
example/templates/: index.html
obsidian_garden_generator/: obgage.py
obsidian_garden_generator/templates/: index.html
