[tool.poetry]
name = "obsidian-garden-generator"
version = "2022.04.26"
description = "Python script to create a digital garden using an Obsidian vault as input"
authors = ["Luca <ldm.marra@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
